--- a/view/index.html
+++ b/view/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Hash Game</title>
         <link rel="stylesheet" href="./style.css" />
-        <script src="./../model/model.js" defer></script>
-        <script src="./../controller/controller.js" defer></script>
+        <script src="./model/model.js" defer></script>
+        <script src="./controller/controller.js" defer></script>
     </head>
     <body>
         <div class="container">
@@ -20,7 +20,7 @@
             <div class="endGame hidden">
                 <h1></h1>
                 <h2>Clique para jogar novamente</h2>
-                <img src="../assets/refresh.png" alt="Restart game" />
+                <img src="./assets/refresh.png" alt="Restart game" />
             </div>
         </div>
     </body>
