--- a/view/style.css
+++ b/view/style.css
@@ -20,11 +20,54 @@ body {
     flex-flow: column wrap;
 
     background-color: #88cefa;
+
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container h1 {
+    padding: 5px;
     text-align: center;
     margin-bottom: 1.5rem;
+}
+
+#title {
+    font-size: 2.8rem;
+}
+
+#question {
+    font-size: 2.1rem;
+    padding: 5px;
+    margin-bottom: 1.2rem;
+}
+
+.buttons {
+    width: fit-content;
+    height: fit-content;
+    padding: 1.2rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.buttons a {
+    padding: 80px;
+    border: 1px solid black;
+    border-radius: 0.8rem;
+}
+
+a:first-child {
+    background: url("../assets/vs.png");
+    background-position: center;
+    background-repeat: no-repeat;
+
+    margin-right: 1.5rem;
+}
+
+a:last-child {
+    background: url("../assets/robot.png");
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .content {
